[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Objects/Coins/Gold-Coins.png" type="Texture" id=1]
[ext_resource path="res://Items/GroundItems/Coin.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="Animation" id=2]
resource_name = "Bounce"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 16.83

[node name="Coin" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="CollectingArea" type="Area2D" parent="."]
monitoring = false
collision_layer = 0

[node name="Shape" type="CollisionShape2D" parent="CollectingArea"]
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="CollectingArea" to="." method="_on_CollectingArea_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
